k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-demo
  template:
    metadata:
      labels:
        app: devops-demo
    spec:
      containers:
      - name: devops-demo
        image: aashikali240/devops-demo:latest
        ports:
        - containerPort: 80
