k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-service
spec:
  type: NodePort
  selector:
    app: devops-app
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30081
