k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: devops.192.168.58.2.nip.io   # <-- apna IP yahan daalo
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devops-service
            port:
              number: 80
